check the setting buttons

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -721,10 +721,11 @@
                                                     </svg>
                                                 </span>
                                                 <span>
-                                                    <h6>اجازه اضافه شدن به پروژه</h6>
-                                                    قبل از این که یک مجموعه
+                                                    <h6>اضافه شدن به صورت خودکار به پروژه</h6>
+                                                    یک مجموعه پژوهشی می تواند بدون اجازه و به صورت اتوماتیک من را به هیأت اساتید اضافه کند.
+                                                    {% comment %} قبل از این که یک مجموعه
                                                     پژوهشی‌ بخواهد من را به پروژه‌ای اضافه کند، از من اجازه گرفته
-                                                    شود
+                                                    شود {% endcomment %}
                                                 </span>
                                             </label>
                                         </div>
