--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -351,27 +351,43 @@
 
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="{% static 'js/fa.js' %}"></script>
+    {#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>#}
+    {#    <script src="{% static 'js/fa.js' %}"></script>#}
+    {#    <script type="text/javascript"#}
+    {#            src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>#}
+    {#    <script type="text/javascript">#}
+    {#        $(function () {#}
+    {#            $('#ApplicationDeadline').datetimepicker({#}
+    {#                locale: 'fa',#}
+    {#                format: 'YYYY/MM/DD',#}
+    {#                debug: true,#}
+    {#                showToday: true,#}
+    {#            });#}
+    {##}
+    {##}
+    {#            //$('#datetimepicker13').datetimepicker({#}
+    {#            //    inline: true,#}
+    {#            //    locale: 'fa',#}
+    {#            //    format: 'L',#}
+    {#            //    toolbarPlacement: 'bottom',#}
+    {#            //    showToday: true,#}
+    {#            //});#}
+    {#        });#}
+    {#    </script>#}
+    <script type="text/javascript" src="https://unpkg.com/persian-date@1.1.0/dist/persian-date.min.js"></script>
     <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+            src="https://unpkg.com/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#ApplicationDeadline').datetimepicker({
-                locale: 'fa',
+            $('#ApplicationDeadline').pDatepicker({
                 format: 'YYYY/MM/DD',
-                debug: true,
-                showToday: true,
+                onShow: function (unix) {
+                    let datePicker = $(".datepicker-container");
+                    if (datePicker.find(".datepicker-plot-area").height() + datePicker.offset().top > $(window).height()) {
+                        datePicker.css("top", datePicker.offset().top - 310);
+                    }
+                },
             });
-
-
-            //$('#datetimepicker13').datetimepicker({
-            //    inline: true,
-            //    locale: 'fa',
-            //    format: 'L',
-            //    toolbarPlacement: 'bottom',
-            //    showToday: true,
-            //});
         });
     </script>
 {% endblock %}
