--- a/templates/chamran_admin/messages.html
+++ b/templates/chamran_admin/messages.html
@@ -98,6 +98,16 @@
                             <div class="attachment"></div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="request-response col-12 text-left">
+                            <button class="border-button confirm-researcher"
+                                    id="project-confirm" value="">تایید
+                            </button>
+                            <button class="border-button fail-button col-1 refuse-researcher"
+                                    id="project-reject" value="">رد
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="message-connect">
