activate the researcher request status button & remove the pencile in paper record for expertUser

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -483,7 +483,7 @@
                                                                 <td>{{ instance.impact_factor }}</td>
                                                                 <td>{{ instance.citation }}</td>
                                                                 <td>
-                                                                    <i class='fas fa-pen' id='edit_exe'></i>
+                                                                    {% comment %} <i class='fas fa-pen' id='edit_exe'></i> {% endcomment %}
                                                                     <i class='fas fa-trash-alt delete_paper'
                                                                        value='{{ instance.pk }}'></i>
                                                                 </td>
