--- a/industry/templates/industry/layouts/researcher_info.html
+++ b/industry/templates/industry/layouts/researcher_info.html
@@ -28,6 +28,10 @@
                                             <span id="researcher_grade"></span>
                                         </div>
                                         <div class="common-info">
+                                            <span class="value">رشته</span>
+                                            <span id="researcher_major"></span>
+                                        </div>
+                                        <div class="common-info">
                                             <span class="value">سال ورود</span>
                                             <span id="researcher_entry_year"></span>
                                         </div>
@@ -40,6 +44,11 @@
                                         </button>
                                         <button class="border-button fail-button refuse-researcher"
                                                 id="researcher-reject-" value="">رد
+                                        </button>
+                                    </div>
+                                    <div class="remove-researcher">
+                                        <button class="border-button fail-button delete-researcher"
+                                                    id="researcher-remove-" value="">حذف
                                         </button>
                                     </div>
                                 </div>
