--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -28,14 +28,23 @@
                                             <span id="researcher_grade"></span>
                                         </div>
                                         <div class="common-info">
+                                            <span class="value">رشته</span>
+                                            <span id="researcher_major"></span>
+                                        </div>
+                                        <div class="common-info">
                                             <span class="value">سال ورود</span>
                                             <span id="researcher_entry_year"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    {% url 'expert:researcherRequest' as researcherRequest_path %}
-                                    {% if request.path == researcherRequest_path %}
+                                    {% url 'expert:show_active_project' as showProjectActive %}
+                                    {% if request.path == showProjectActive %}
+                                        <div class="remove-researcher">
+                                            <button class="border-button fail-button researcher-remove"
+                                                        id="researcher-remove-" value="">حذف
+                                            </button>
+                                        </div>
 {#                                        <div class="request-response">#}
 {#                                            <button class="border-button confirm-researcher"#}
 {#                                                    id="researcher-confirm-" value="">تایید#}
